# gpu-emulation-stress-test

./: CONTRIBUTING.md  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/android/gpu_emulation_stress_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gpu_stress_test.esys
app/src/main/cpp/: ActionCurve.cpp  ActionCurve.h  BezierCurve.cpp  BezierCurve.h  DesktopGLHeaders.h  Entity.cpp  Entity.h  FileLoader.cpp  FileLoader.h  GLCoreShaders.cpp  GLES2Renderer.cpp  GLES2Renderer.h  GLES3Renderer.cpp  GLES3Renderer.h  GLES3Shaders.cpp  OBJParse.cpp  OBJParse.h  ParticleSystem.cpp  ParticleSystem.h  RenderModel.cpp  RenderModel.h  ScopedProfiler.cpp  ScopedProfiler.h  TextureLoader.cpp  TextureLoader.h  WorldState.cpp  WorldState.h  lodepng.cpp  lodepng.h  log.h  matrix.cpp  matrix.h  native_entry_points.cpp  util.cpp  util.h
app/src/main/java/com/android/gpu_emulation_stress_test/: GPUEmulationStats.java  GPUEmulationStressTestActivity.java  GPUEmulationStressTestView.java  MainActivity.java
app/src/main/res/anim/: hide.xml  show.xml
app/src/main/res/drawable/: ic_launcher_background.xml  ic_play_arrow_black_24dp.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  content_main.xml  version_dialogue.xml
app/src/main/res/layout-v17/: version_dialogue.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/android/gpu_emulation_stress_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
